--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,17 @@
   <dependencies>
   
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-      <version>4.12</version>
+    	<groupId>junit</groupId>
+    	<artifactId>junit</artifactId>
+    	<scope>test</scope>
+    	<version>4.12</version>
     </dependency>
+    
+    <dependency>
+		<groupId>com.google.guava</groupId>
+		<artifactId>guava</artifactId>
+		<version>28.2-jre</version>
+	</dependency>
 	
   </dependencies>
 </project>
