--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,18 @@
 		<artifactId>guava</artifactId>
 		<version>28.2-jre</version>
 	</dependency>
+
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.30</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>org.slf4j</groupId>
+    	<artifactId>slf4j-jdk14</artifactId>
+    	<version>1.7.25</version>
+	</dependency>
 	
   </dependencies>
 </project>
